--- a/dashingStyle.css
+++ b/dashingStyle.css
@@ -85,3 +85,46 @@ body {
 .drop-list button:hover {
     background-color: #b3b2b2;
 }
+
+.headerCol {
+    color: white;
+    font-weight: bold;
+    padding: 8px;
+    border: 2px solid white;
+    font-size: 18px;
+    background-color: #333;
+}
+
+.bodyCol {
+    padding: 8px;
+    border: 2px solid white;
+    background-color: #aaa;
+    text-align: left;
+}
+
+.einTable {
+    width: 100%;
+    border-collapse: collapse;
+}
+.emptyCol {
+    font-style: italic;
+    border: 2px solid white;
+    background-color: #aaa;
+    text-align: center;
+}
+.inputsDiv {
+    display: flex;
+}
+.oneInput {
+    width: 30%;
+    padding: 5px;
+}
+.oneInput label, .oneInput input, .oneInput textarea {
+    width: 100%;
+    padding: 6px;
+    display: block;
+}
+
+.oneInput textarea {
+    resize: none;
+}
