--- a/dashingStyle.css
+++ b/dashingStyle.css
@@ -34,10 +34,10 @@ body {
     padding: 15px;
 }
 .toast {
-    background-color: #616161;; 
+    background-color: rgb(2, 174, 174); 
     color: #fff;
     padding: 10px;
-    position: absolute;
+    position: fixed;
     top: 30%;
     left: 42%;
     border-radius: 18px;
@@ -114,6 +114,7 @@ body {
 }
 .inputsDiv {
     display: flex;
+    flex-wrap: wrap;
 }
 .oneInput {
     width: 30%;
@@ -174,6 +175,55 @@ body {
     margin-bottom: 5px;
 }
 
+.tableInput {
+    width: 100%;
+    border: none;
+    color: black;
+    background-color: transparent;
+}
+
+.editIndexBtn {
+    border-radius: 5px;
+    background-color: rgb(15, 56, 83);
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+    position: absolute;
+    top: 0;
+    z-index: 2;
+    padding: 3px 10px;
+}
+.editSave {
+    left: 96%
+}
+
+.editCancel {
+    right: 96%;
+}
+.navigation {
+    background-color: rgba(0, 97, 97, 0.48);
+    padding: 5px 10px;
+}
+.navBtn {
+    border-radius: 15px;
+    height: 30px;
+    background-color: #616161;
+    margin: 0 5px;
+    padding: 2px 10px;
+    font-size: 16px;
+    color: aqua;
+    cursor: pointer;
+}
+.navBtn a {
+    text-decoration: none;
+    color: aqua;
+}
+.navSpan {
+    text-align: center;
+    width: 50%;
+    font-weight: bold;
+    display: inline-block;
+}
 @media (max-width:1100px){
     .goes-down-here {
         width: 100%;
