--- a/dashingStyle.css
+++ b/dashingStyle.css
@@ -120,7 +120,7 @@ body {
     width: 30%;
     padding: 5px;
 }
-.oneInput label, .oneInput input, .oneInput textarea {
+.oneInput label, .oneInput input, .oneInput textarea, .oneInput select {
     width: 100%;
     padding: 6px;
     display: block;
